# ProjectDashboard

./: .gitignore  AGENTS.md  Dockerfile  LEARNINGS.md  README.md  app.py  main.sh  pyproject.toml  requirements.txt
.codex/: config.toml
.codex/rules/: default.rules
debug/: projdash_schedule_debug_project_new_project_20260514T150600Z.json
docs/: agent_json_dsl.md  architecture.md  committed_schedule_snapshots.md  invariant_test_audit.md  invariant_uncredited_test_functions.md  invariants.md  pm_flow_redesign_note.md  project_manager_agent_flow.md  project_manager_flow_iteration_note.md  rcpsp_heuristic_mcts_comparison.md  resource_constrained_scheduling.md  sqlite_storage.md  test_function_inventory.md
docs/tickets/: phase_1_service_rewrite.md  resource_constrained_scheduling.md
git_work/: git_work.py
instructions/: agentic_development_process.md
old_code/: app.py
old_code/timelines/: components.py  critical_path.py  probabilities.py  processes.py  resource_usage_analysis.py  utils.py  (+1 more)
tests/: test_calendar.py  test_resource_api.py  test_resource_queries.py  test_resource_schedule.py  test_schedule.py  test_service_api.py  test_service_caching.py  test_service_mutations.py  test_service_projection_cache.py  test_slack_integration.py  test_slack_service.py  test_sqlite_repository.py  test_storage_bootstrap.py  test_ui_adapters.py  test_ui_app_logic.py  test_ui_service_client.py
timelines/: components.py  critical_path.py  graph.py  probabilities.py  processes.py  resource_usage_analysis.py  resources.py  roles.py  subgraphs.py  time_changes.py  utils.py
(+38 files in other folders)
